Lighthouse fix: "Background and foreground colors do not have a sufficient contrast ratio"

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,7 +18,7 @@ body {
     border-radius: 4px;
     bottom: 4px;
     font-size: 10px;
-    color: #fff;
+    color: #000;
     background: #53BBAD;
     line-height: 1;
     padding: 3px 4px
